# Homework-2

./: .env.homework-2  README.md  main.py  pyproject.toml  week3_assignment.ipynb
