[project]
name = "Homework-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "langchain==1.3.2",
    "langchain-openai==1.2.2",
    "langgraph==1.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
]
